# graph-represent

./: .gitignore  README.md  experiments.md  ideas.md  pyproject.toml
data/argument_essays/: PAPER.md  README.md  extract_answers.py  extract_essays_zip_scores.py  normalize_essays.py  score_outputs.py
data/icle/: ICLEplusplus.csv  extract_answers.py  normalize_icle.py  score_outputs.py
data/memeargs/: README.md  extract_answers.py  normalize_memeargs.py  score_outputs.py  temporary_thresholds.json
graph_represent/: __init__.py  cli.py  exceptions.py  format_suite.py  graph_formats.py  models.py  registry.py  run.py  runner.py  workflow.py
graph_represent/dataloaders/: __init__.py  base.py  corpus_graphs.py  icle_essays.py  semeval.py
graph_represent/processors/: __init__.py  base.py  clean_graph.py  load_graph_from_disk.py  metrics.py  model_inference.py  persuasion.py  remap_json_keys.py
graph_represent/types/: __init__.py  (+8 more)
runs/: argument_essays_graph_format_comparison.py  icle_graph_format_comparison.py  icle_graph_format_comparison_2shot.py  icle_graph_format_comparison_2shot_existing_graphs.py  icle_graph_format_comparison_existing_graphs.py  icle_graph_format_comparison_existing_graphs_anchor_int.py  memeargs_graph_format_comparison.py
scripts/: build_dev_datasets.py  generate_graph_formats.py  generate_icle_cumulative_qwk_plot.py  generate_icle_item_score_plot.py  generate_paper_plot.py  generate_paper_summary.py  stream_icle_graph.py  validate_graph_formats.py  visualize_run_messages.py
tests/: conftest.py  test_corpus_data.py  test_workflows.py
(+33 files in other folders)
